log
mi., 30 de abr. de 2025  8:29:41: 
 tests:  1|8
total_score: 0/70
5729e4d
mi., 30 de abr. de 2025  8:30:59: 
 treemap.c | 12 +++++++++---
 1 file changed, 9 insertions(+), 3 deletions(-)
 tests:  4|7
total_score: 5/70
3511b24
mi., 30 de abr. de 2025  8:37:19: 
 treemap.c | 40 +++++++++++++++++++++++++++++++++++++++-
 1 file changed, 39 insertions(+), 1 deletion(-)
 tests:  6|6
total_score: 15/70
a83c01c
mi., 30 de abr. de 2025  8:52:24: 
 treemap.c | 16 ++++++++++++++--
 1 file changed, 14 insertions(+), 2 deletions(-)
 tests:  8|5
total_score: 20/70
efb6de6
mi., 30 de abr. de 2025  8:56:10: 
 treemap.c | 24 +++++++++++++++++++++++-
 1 file changed, 23 insertions(+), 1 deletion(-)
 tests:  15|4
total_score: 30/70
c302bda
do.,  4 de may. de 2025 13:58:42: 
 treemap.c | 11 ++++++++++-
 1 file changed, 10 insertions(+), 1 deletion(-)
 tests:  15|4
total_score: 30/70
9a76eed
do.,  4 de may. de 2025 13:59:10: 
 treemap.c | 3 +--
 1 file changed, 1 insertion(+), 2 deletions(-)
 tests:  17|3
total_score: 30/70
848925e
do.,  4 de may. de 2025 14:08:28: 
 treemap.c | 32 +++++++++++++++++++++++++++++++-
 1 file changed, 31 insertions(+), 1 deletion(-)
 tests:  17|3
total_score: 30/70
65c81b0
do.,  4 de may. de 2025 14:08:52: 
 treemap.c | 1 -
 1 file changed, 1 deletion(-)
Compilation failed
In file included from test.c:4:0:
treemap.c: In function 'upperBound':
treemap.c:179:1: error: control reaches end of non-void function [-Werror=return-type]
 }
 ^
cc1.exe: all warnings being treated as errors
36f1011
do.,  4 de may. de 2025 14:08:59: 
Compilation failed
In file included from test.c:4:0:
treemap.c: In function 'upperBound':
treemap.c:179:1: error: control reaches end of non-void function [-Werror=return-type]
 }
 ^
cc1.exe: all warnings being treated as errors
a0a4caa
do.,  4 de may. de 2025 14:09:12: 
 treemap.c | 1 +
 1 file changed, 1 insertion(+)
 tests:  17|3
total_score: 30/70
fc50e3a
do.,  4 de may. de 2025 14:10:52: 
 treemap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  21|2
total_score: 40/70
753182b
do.,  4 de may. de 2025 14:23:43: 
 treemap.c | 51 ++++++++++++++++++++++++++++++++++++++++++++++++++-
 1 file changed, 50 insertions(+), 1 deletion(-)
 tests:  24|1
total_score: 55/70
c809d1c
do.,  4 de may. de 2025 14:24:51: 
 treemap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  24|1
total_score: 55/70
35de664
do.,  4 de may. de 2025 14:25:17: 
 treemap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  24|1
total_score: 55/70
e82d85a
do.,  4 de may. de 2025 14:25:46: 
 treemap.c | 2 ++
 1 file changed, 2 insertions(+)
Compilation failed
In file included from test.c:4:0:
treemap.c: In function 'eraseTreeMap':
treemap.c:168:12: error: 'return' with a value, in function returning void [-Werror]
     return NULL;
            ^~~~
treemap.c:161:6: note: declared here
 void eraseTreeMap(TreeMap * tree, void* key){
      ^~~~~~~~~~~~
cc1.exe: all warnings being treated as errors
e7d9e79
do.,  4 de may. de 2025 14:26:01: 
 treemap.c | 2 --
 1 file changed, 2 deletions(-)
 tests:  24|1
total_score: 55/70
8536815
do.,  4 de may. de 2025 14:29:21: 
 treemap.c | 13 ++++++++++++-
 1 file changed, 12 insertions(+), 1 deletion(-)
 tests:  26|1
total_score: 60/70
c7c51e7
